cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_170.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_conv.c:84: error: DEAD_STORE
  The value written to &p (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_conv.c:84:10: Write of unused value
82.       if (BN_is_zero(t)) {
83.           *p++ = '0';
84.           *p++ = '\0';
               ^
85.       } else {
86.           if (BN_is_negative(t))
